--- a/style.css
+++ b/style.css
@@ -4,11 +4,49 @@
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 300px;
     width: 100%;
     margin: 0 auto;
 }
 
-.hiden-element {
-    display: none;
+.accordeon {
+    width: 100%;
+    list-style: none;
+}
+
+.title {
+    box-sizing: border-box;
+    padding: 10px 30px;
+    background: #72deff;
+    position: relative;
+    cursor: pointer;
+}
+
+.title::before {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-bottom: 2px solid #000;
+    border-right: 2px solid #000;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    transform: rotate(45deg);
+    transform-origin: 55% 65%;
+    transition: .3s linear;
+}
+
+.title.active::before {
+    transform: rotate(-135deg);
+}
+
+.content {
+    overflow: hidden;
+    height: 0;
+    transition: .3s linear;
+}
+
+.content.active {
+    height: 40px;
 }
